@@ -1,2 +1,5 @@
 # JavaProjects
 projects related to majorly java language
+
+
+used this for my vm options while running javaFX  => --module-path /path/to/javafx-sdk-11.0.1/lib --add-modules=javafx.controls,javafx.fxml
